bookstack-docs/deployment/app/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstack
  name: bookstack
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - env:
        - name: DB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: mysqldump
              key: db1
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              name: mysqldump
              key: dbhost
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: mysqldump
              key: password
        - name: DB_USERNAME
          valueFrom:
            configMapKeyRef:
              name: mysqldump
              key: user
        - name: APP_URL
          valueFrom:
            configMapKeyRef:
              name: mysqldump
              key: appUrl
        image: solidnerd/bookstack:22.04
        name: bookstack
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        # readinessProbe:
        #   httpGet:
        #     path: /login
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 1
        #   periodSeconds: 15
        # livenessProbe:
        #   httpGet:
        #     path: /login
        #     port: 80
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 1
        #   periodSeconds: 15
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: uploads
          mountPath: /var/www/bookstack/public/uploads
        - name: storage-uploads
          mountPath: /var/www/bookstack/storage/uploads
        - mountPath: "/var/www/bookstack/.env"
          subPath: ".env"
          name: env-config
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
      - name: storage-uploads
        persistentVolumeClaim:
          claimName: storage-uploads-pvc
      - name: env-config
        configMap:
          name: env-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstack
  name: bookstack
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bookstack
