bookstack-docs/deployment/app/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookstack
spec:
  hosts:
    -  docs.vongjon.com
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: bookstack.bookstack.svc.cluster.local
            port:
              number: 8080
